# test_ris_cuda_mpi

./: CMakeLists.txt  README.md  main.cpp  main.cu
